# tycho-simulation

./: .dockerignore  .gitignore  .taplo.toml  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  README.md  Readme.md  build.sh  check.sh  release.config.js  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml  release_docker.yaml  release_wheel.yaml  tests-and-lints-template.yaml  v2-build-and-deploy-branch.yaml  v2-main-workflow.yaml  v2-promote-to-production.yaml  v2-release-maintenance.yaml  v2-validate-pr.yaml
examples/explorer/: Readme.md  main.rs  ui.rs  utils.rs
examples/explorer/data_feed/: state.rs  tycho.rs
examples/price_printer/: Readme.md  main.rs  ui.rs  utils.rs
examples/quickstart/: Readme.md  main.rs
protosim/: Cargo.toml  Readme.md
protosim-py/: Cargo.toml  pyproject.toml
protosim-py/python/protosim/: protosim_demo.py
protosim-py/src/: lib.rs  simulation_py.rs
protosim/src/: gss.py  gss.rs  lib.rs  models.rs  safe_math.rs  serde_helpers.rs  u256_num.rs
protosim/src/evm_simulation/: Readme.md  account_storage.rs  cache.rs  database.rs  mod.rs  simulation.rs  storage.rs  traces.rs  tycho_client.rs  tycho_db.rs  tycho_models.rs
protosim/src/graph/: edge_paths.rs  edge_routes.rs  graph.rs  mod.rs  protograph.rs  tick.rs
protosim/src/optimize/: gss.rs  mod.rs
protosim/src/protocol/: errors.rs  events.rs  mod.rs  models.rs  state.rs  tycho.rs
protosim/src/protocol/dodo/: state.rs
protosim/src/protocol/evm/: mod.rs  simulation.rs  storage.rs
protosim/src/protocol/uniswap_v2/: events.rs  mod.rs  reserve_price.rs  state.rs
protosim/src/protocol/uniswap_v3/: enums.rs  events.rs  liquidity_math.rs  mod.rs  q96_math.rs  solidity_math.rs  sqrt_price_math.rs  state.rs  swap_math.rs  tick_list.rs  tick_math.rs
protosim/src/starknet_simulation/: mod.rs  rpc_reader.rs  rpc_state.rs  simulation.rs
protosim/tests/: test_starknet_simulation.rs
protosim/tests/resources/: fibonacci.cairo  fibonacci.json
protosim/tests/starknet/: mod.rs
protosim_py/: Cargo.toml  Readme.md  build_protosim_wheel.sh  protosim_demo.py  protosim_evm_demo.py  protosim_py.Dockerfile  protosim_starknet_demo.py  pyproject.toml
protosim_py/python/protosim/: protosim_db_demo.py  protosim_demo.py
protosim_py/python/protosim_py/: exceptions.py  models.py
protosim_py/python/protosim_py/evm/: __init__.py  adapter_contract.py  decoders.py  pool_state.py  storage.py  token.py  utils.py
protosim_py/python/protosim_py/starknet/: __init__.py
protosim_py/python/test/: conftest.py  test_evm_token.py  test_third_party_pool.py
protosim_py/python/test/evm/: utils.py
protosim_py/src/: lib.rs  logging.rs  simulation_py.rs  starknet_simulation_py.rs  starknet_structs_py.rs  structs_py.rs
src/: Readme.md  lib.rs  models.rs  safe_math.rs  serde_helpers.rs  simple_solver.rs  u256_num.rs  utils.rs
src/data_feed/: mod.rs  tick.rs  tycho.rs
src/evm/: Readme.md  account_storage.rs  decoder.rs  engine_db_interface.rs  mod.rs  simulation.rs  simulation_db.rs  stream.rs  token.rs  traces.rs  tycho_client.rs  tycho_db.rs  tycho_models.rs
src/evm/engine_db/: engine_db_interface.rs  mod.rs  simulation_db.rs  tycho_db.rs
src/evm/protocol/: erc20.rs  filters.rs  mod.rs  safe_math.rs  u256_num.rs  utils.rs
src/evm/protocol/uniswap_v2/: events.rs  mod.rs  reserve_price.rs  state.rs  tycho_decoder.rs
src/evm/protocol/uniswap_v3/: liquidity_math.rs  mod.rs  solidity_math.rs  sqrt_price_math.rs  state.rs  swap_math.rs  tick_list.rs  tick_math.rs  tycho_decoder.rs
src/evm/protocol/uniswap_v4/: mod.rs  state.rs  tycho_decoder.rs
src/evm/protocol/uniswap_v4/assets/: sepolia_state_block_7239119.json
src/evm/protocol/utils/: mod.rs
src/evm/protocol/utils/uniswap/: liquidity_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  tick_list.rs  tick_math.rs
src/evm/protocol/vm/: adapter_contract.rs  constants.rs  erc20_overwrite_factory.rs  erc20_token.rs  mod.rs  models.rs  state.rs  state_builder.rs  tycho_decoder.rs  tycho_simulation_contract.rs  utils.rs
src/evm/protocol/vm/assets/: BalancerV2SwapAdapter.evm.runtime  CurveSwapAdapter.evm.runtime
src/evm_simulation/: database.rs  mod.rs  simulation.rs  tycho_client.rs  tycho_db.rs
src/examples/: graph.rs
src/optimize/: gss.rs
src/protocol/: errors.rs  mod.rs  models.rs  state.rs
src/protocol/dodo/: state.rs
src/protocol/uniswap_v2/: mod.rs  reserve_price.rs  state.rs  tycho_decoder.rs
src/protocol/uniswap_v3/: mod.rs  solidity_math.rs  sqrt_price_math.rs  state.rs  swap_math.rs  tick_list.rs  tick_math.rs  tycho_decoder.rs
src/protocol/vm/: adapter_contract.rs  constants.rs  engine.rs  erc20_overwrite_factory.rs  errors.rs  mod.rs  models.rs  protosim_contract.rs  state.rs  state_builder.rs  tycho_decoder.rs  tycho_simulation_contract.rs  utils.rs
src/starknet_simulation/: mod.rs  rpc_reader.rs  simulation.rs
src/tests/starknet/: test_starknet_simulation.rs
tests/assets/decoder/: uniswap_v2_delta.json  uniswap_v2_snapshot.json  uniswap_v2_snapshot_broken_id.json  uniswap_v2_snapshot_broken_state.json
tutorial/: Cargo.toml
tutorial/src/: lib.rs  main.rs
tutorial/src/data_feed/: mod.rs  state.rs  tick.rs  tycho.rs
tycho_simulation_py/: Cargo.toml  Readme.md  build_tycho_simulation_wheel.sh  protosim_evm_demo.py  pyproject.toml  tycho_simulation_py.Dockerfile
tycho_simulation_py/python/protosim_py/evm/: utils.py
tycho_simulation_py/python/test/: test_evm_token.py  test_third_party_pool.py
tycho_simulation_py/python/test/assets/: BalancerV2SwapAdapter.evm.runtime  sfrxEthToken.evm.runtime
tycho_simulation_py/python/test/evm/: utils.py
tycho_simulation_py/python/tycho_simulation_py/: models.py
tycho_simulation_py/python/tycho_simulation_py/evm/: __init__.py  adapter_contract.py  constants.py  pool_state.py  token.py  utils.py
tycho_simulation_py/src/: lib.rs  simulation_py.rs  structs_py.rs
