[package]
name = "prop-builder"
version = "0.16.11"
edition = "2021"
[[bin]]
name = "prop-builder"
path = "src/main.rs"

[workspace]
members = ["protosim", "protosim_py"]

[dependencies]
time = "0.3.36"
protosim = { version = ">0.1.0", path = "./protosim" }
ethers = "2.0.13"
rdkafka = "0.36.0"
tokio = { version = "1.23.0", features = ["full"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
futures = "0.3.25"
serde_json = "1.0.105"
serde = { version = "1.0", features = ["rc"] }
clap = { version = "4.4.14", features = ["derive"] }
reqwest = "0.12.7"
async-trait = "0.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tycho-client = { git = "ssh://github.com/propeller-heads/tycho-indexer.git", package = "tycho-client", tag = "0.24.1" }
tycho-core = { git = "ssh://github.com/propeller-heads/tycho-indexer.git", package = "tycho-core", tag = "0.24.1" }
anyhow = "1.0.79"
console-subscriber = "0.2.0"
tracing-opentelemetry = { version = "0.22", default-features = false }
opentelemetry = { version = "0.21" }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", default-features = false, features = [
    "trace",
    "grpc-tonic",
] }
chrono = { version = "0.4.26", features = ["serde"] }

[dev-dependencies]
rstest = "0.18.2"
http = "0.2.8"
mockito = "1.1.1"

[profile.bench]
debug = true
