[package]
name = "protosim"
version = "0.32.0"
edition = "2021"

[workspace]
members = ["protosim_py"]

[dependencies]
ethabi = "13.0" 
ethers = "2.0.13"
serde_json = "1.0.105"
serde = { version = "1.0", features = ["rc"] }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.28"
revm = { version = "12.1.0", features = ["ethersdb", "serde"] }
hex = "0.4.3"
thiserror = "1"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
strum = "0.25.0"
strum_macros = "0.25.2"
uuid = { version = "1.4.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
num-traits = "0.2.17"
dotenv = "0.15.0"
tycho-core = { git = "ssh://github.com/propeller-heads/tycho-indexer.git", package = "tycho-core", tag = "0.34.0" }
tycho-client = { git = "ssh://github.com/propeller-heads/tycho-indexer.git", package = "tycho-client", tag = "0.34.0" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "2544793" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "2544793" }
revm-inspectors = { version = "0.5", features = ["serde"] }
mini-moka = "0.10"
lazy_static = "1.4.0"
itertools = "0.10.5"

[dev-dependencies]
mockito = "1.1.1"
warp = "0.3.5"
approx = "0.5.1"
rstest = "0.18.2"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tempfile = "3.13.0"

[features]
default = []
network_tests = []

[profile.bench]
debug = true
