[package]
name = "protosim"
version = "0.1.0"
edition = "2021"


[dependencies]
ethers = "^2.0.2"
indexmap = { version = "2.0.2", features = ["std"] }
itertools = "0.11.0"
petgraph = "0.6.2"
enum_dispatch = "0.3.8"
serde_json = "1.0.105"
serde = "1.0.152"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
async-trait = "0.1.73"
hyper = "0.14.27"
futures = "0.3.28"
revm = { git = "https://github.com/bluealloy/revm", rev = "00281930d90f200ac376be5778d62bed591b9c99", features = [
    "ethersdb",
    "serde",
] }
hex = "0.4.3"
thiserror = "1"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
strum = "0.25.0"
strum_macros = "0.25.2"
uuid = { version = "1.4.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
starknet_in_rust = "0.4.0"
starknet_api = "0.4.1"
starknet = "0.5.0"
cairo-vm = { version = "0.8.5", features = ["cairo-1-hints"] }
dotenv = "0.15.0"
reqwest = "0.11.14"
rpc_state_reader = { git = "https://github.com/lambdaclass/starknet_in_rust.git", package = "rpc_state_reader", tag = "v0.4.0" }
num-traits = "0.2.17"

[dev-dependencies]
mockito = "1.1.1"
warp = "0.3.5"
approx = "0.3.2"
rstest = "0.16.0"

[features]
default = []
network_tests = []
