[package]
name = "protosim"
version = "0.13.0"
edition = "2021"


[dependencies]
ethers = "2.0.13"
indexmap = { version = "2.2", features = ["std"] }
itertools = "0.11.0"
petgraph = "0.6.2"
enum_dispatch = "0.3.8"
serde_json = "1.0.105"
serde = { version = "1.0", features = ["rc"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
async-trait = "0.1.73"
hyper = "0.14.27"
futures = "0.3.28"
revm = { version = "12.1.0", features = ["ethersdb", "serde"] }
hex = "0.4.3"
thiserror = "1"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
strum = "0.25.0"
strum_macros = "0.25.2"
uuid = { version = "1.4.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
num-traits = "0.2.17"
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
tycho-core = { git = "ssh://github.com/propeller-heads/tycho-indexer.git", package = "tycho-core", tag = "0.9.1" }
tycho-client = { git = "ssh://github.com/propeller-heads/tycho-indexer.git", package = "tycho-client", tag = "0.9.1" }
rpc_state_reader = { git = "https://github.com/propeller-heads/starknet_in_rust.git", package = "rpc_state_reader", branch = "feature/bump-cairo-lang-version", optional = true }
starknet_in_rust = { git = "https://github.com/propeller-heads/starknet_in_rust.git", package = "starknet_in_rust", branch = "feature/bump-cairo-lang-version", optional = true }
starknet_api = { version = "0.4.1", optional = true }
starknet = { version = "0.5.0", optional = true }
cairo-vm = { version = "0.8.5", features = ["cairo-1-hints"], optional = true }

foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "2544793" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "2544793" }
revm-inspectors = { version = "0.5", features = ["serde"] }

[dev-dependencies]
mockito = "1.1.1"
warp = "0.3.5"
approx = "0.5.1"
rstest = "0.18.2"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tungstenite = "0.20.1"

[features]
default = []
network_tests = []
starknet = [
    "dep:starknet_in_rust",
    "dep:starknet_api",
    "dep:starknet",
    "dep:cairo-vm",
    "dep:rpc_state_reader",
]
