[package]
name = "protosim-py"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "protosim_py"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4.3"
pyo3 = { version = "0.19", features = ["num-bigint", "extension-module"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"] }
protosim = { path = "../protosim" }
tokio = { version = "1.23.0", features = ["full"] }
ethers = "^2.0.2"
once_cell = "1.17.2"
revm = { git = "https://github.com/bluealloy/revm", rev = "00281930d90f200ac376be5778d62bed591b9c99", features = [
    "ethersdb",
] }
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
uuid = "1.4.1"
pyo3-log = "0.9.0"
