[package]
name = "_protosim_py"
version = "0.25.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_protosim_py"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4.3"
pyo3 = { version = "0.19", features = ["num-bigint", "extension-module"] }
protosim = { path = "../"}
tokio = { version = "1.38.0", features = ["full"] }
ethers = "2.0.13"
revm = { version = "12.1.0", features = [
    "ethersdb",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
pyo3-log = "0.9.0"
