[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "protosim-py"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.4.12"

[tool.maturin]
python-source = "python"
module-name = "protosim_py._protosim_py"
features = ["pyo3/extension-module"]
